--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="mousetracking.js"></script>
+<script src="fullscreen.js"></script>
+<link rel="stylesheet" type="text/css" href="fullscreen.css">
 
 <button style="position: absolute; left: 50%; right: 50%; bottom: 0%; 
                height:10%; width: 20%"
@@ -26,3 +28,13 @@
 		}
 	);	
 </script>
+
+<!-- From solution here: https://stackoverflow.com/a/44328113/3042770 -->
+<div class="backdrop">
+  <div id="popdiv">
+	This experiment must be run in fullscreen mode.
+	<br>
+	To exit fullscreen mode, press ESC.
+    <button id="btn-go-fullscreen">Switch to fullscreen</button
+  </div>
+</div>
