--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <link rel="stylesheet" type="text/css" href="fullscreen.css">
 
 <button style="position: absolute; left: 50%; right: 50%; bottom: 0%; 
-               height:10%; width: 20%"
+               height:10%; width: 20%; transform: translateX(-50%);"
 		id="start">
 	Start
 </button>
 <button style="position: absolute; left: 80%; right: 0%; top: 0%;
-               height:20%; width: 20%"
+               height:20%; width: 20%; "
 		id="right">
 	Right
 </button>
