Added debug/dev mode
Run `debug()` in console

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 		);
 		fullscreen.enforce_fullscreen();
 	});
-
+	
+	function debug() {
+	    fullscreen.stop_enforcing_fullscreen();
+	}	
 
 </script>
 
