--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	function start_trial(){
 		$('#start').prop("disabled", true);
 		$('#right').prop("disabled", false);
+		mousetracking.lock_pointer();
 		mousetracking.start_tracking();
 	}
 	
