--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		$('#right').prop("disabled", false);
 		mousetracking.lock_pointer();
 		mousetracking.start_tracking();
+		mousetracking.add_cursor_image();
 	}
 	
 	function stop_trial(){
