Move fake cursor with mouse

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		mousetracking.lock_pointer();
 		mousetracking.start_tracking();
 		mousetracking.add_cursor_image();
+		mousetracking.let_user_move_cursor();
 	}
 	
 	function stop_trial(){
