Click buttons with the fake cursor

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		mousetracking.start_tracking();
 		mousetracking.add_cursor_image();
 		mousetracking.let_user_move_cursor();
+		mousetracking.let_user_click_with_fake_cursor();
 	}
 	
 	function stop_trial(){
