Abort trial on exiting fullscreen or pointer lock

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 		mousetracking.start_tracking();
 	}
 	
+	function abort_trial(){
+		$('#right').prop("disabled", true);
+		$('#start').prop("disabled", false);
+		mousetracking.reset();
+	};
+	
 	function stop_trial(){
 		$('#right').prop("disabled", true);
 		$('#start').prop("disabled", false);
