--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <script src="mousetracking.js"></script>
 <script src="fullscreen.js"></script>
 <link rel="stylesheet" type="text/css" href="fullscreen.css">
+<link rel="stylesheet" type="text/css" href="trial.css">
 
 <button style="position: absolute; left: 50%; right: 50%; bottom: 0%; 
                height:10%; width: 20%; transform: translateX(-50%);"
